K8S/Mod7/echo-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-echo
spec:
  selector:
    app: echo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
    name: echo-1
    labels:
      app: echo-app
spec:
  containers:
  - image: gcr.io/google_containers/echoserver:1.4
    name: echo
    resources: {}
    ports: 
        - containerPort: 8080
          name: http
